# Vita3K

vita3k/: main.cpp
vita3k/features/include/features/: state.h
vita3k/renderer/include/renderer/: types.h
vita3k/renderer/include/renderer/gl/: types.h
vita3k/renderer/src/: shaders.cpp
vita3k/renderer/src/gl/: compile_program.cpp  draw.cpp  renderer.cpp  sync_state.cpp
vita3k/renderer/src/texture/: format.cpp
vita3k/renderer/src/vulkan/: pipeline_cache.cpp  renderer.cpp
vita3k/shader/: CMakeLists.txt
vita3k/shader/include/shader/: decoder_helpers.h  disasm.h  gxp_parser.h  program_analyzer.h  recompiler.h  translator.h  translator_types.h  types.h  uniform_block.h
vita3k/shader/include/shader/glsl/: code_writer.h  consts.h  params.h  recompiler.h  translator.h
vita3k/shader/include/shader/spirv/: recompiler.h  translator.h  translator_entry.h  utilities.h
vita3k/shader/src/: decode_helpers.cpp  disasm.cpp  gxp_parser.cpp  program_analyzer.cpp  recompiler.cpp  translator.cpp  types.cpp
vita3k/shader/src/glsl/: code_writer.cpp  params.cpp  recompiler.cpp  translator.cpp
vita3k/shader/src/glsl/translator/: alu.cpp  branch_cond.cpp  data.cpp  ialu.cpp  special.cpp  texture.cpp
vita3k/shader/src/spirv/: recompiler.cpp  translator.cpp  utilities.cpp
vita3k/shader/src/spirv/translator/: alu.cpp  branch_cond.cpp  data.cpp  ialu.cpp  special.cpp  texture.cpp  utils.cpp
vita3k/shader/src/translator/: alu.cpp  branch_cond.cpp  data.cpp  ialu.cpp  illegal.cpp  special.cpp  texture.cpp
